--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-<html amp>
+<html>
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Documentation Of 2022</title>
+<title>Welcome To Maliek News</title>
 
 <link rel="amphtml" href="https://gittyhub.netlify.app/">
+<!-- OpenReplay Tracking Code for my first project -->
+<script>
+  var initOpts = {
+    projectKey: "EedHRhhVb2mgXN6wG0Ke",
+    defaultInputMode: 0,
+    obscureTextNumbers: false,
+    obscureTextEmails: true,
+  };
+  var startOpts = { userID: "" };
+  (function(A,s,a,y,e,r){
+    r=window.OpenReplay=[e,r,y,[s-1, e]];
+    s=document.createElement('script');s.src=A;s.async=!a;
+    document.getElementsByTagName('head')[0].appendChild(s);
+    r.start=function(v){r.push([0])};
+    r.stop=function(v){r.push([1])};
+    r.setUserID=function(id){r.push([2,id])};
+    r.setUserAnonymousID=function(id){r.push([3,id])};
+    r.setMetadata=function(k,v){r.push([4,k,v])};
+    r.event=function(k,p,i){r.push([5,k,p,i])};
+    r.issue=function(k,p){r.push([6,k,p])};
+    r.isActive=function(){return false};
+    r.getSessionToken=function(){};
+  })("//static.openreplay.com/latest/openreplay.js",1,0,initOpts,startOpts);
+</script>
 </head>
 <body>
- <h1>Welcome from Tauri!</h1>
+ <h1>Welcome To Maliek News</h1>
     <script>
       // access the pre-bundled global API functions
       const { invoke } = window.__TAURI__.tauri
@@ -21,33 +45,7 @@
         .then((response) => console.log(response))
     </script>
 
-<div id='content'></div>
 
-<script>
-  async function runExample() {
-    // In the simplest case, postTask with no parameters will schedule a task at
-    // default priority, which is 'user-visible'.
-    let resultPromise = scheduler.postTask(() => {
-      appendToContent('h3', 'postTask Example: Scheduling Tasks');
-    });
-    // postTask returns a Promise, so the result can be awaited.
-    await resultPromise;
 
-    // |results| is an array of Promises representing postTask results.
-    let results = [];
-
-    // Valid priorities, from highest to lowest, are:
-    //   'user-blocking', 'user-visible', 'background'.
-    results.push(scheduler.postTask(() => 'This should be line 3', {priority: 'background'}));
-    results.push(scheduler.postTask(() => 'This should be line 2', {priority: 'user-visible'}));
-    results.push(scheduler.postTask(() => 'This should be line 1', {priority: 'user-blocking'}));
-
-    results.forEach((promise) => {
-      promise.then((result) => appendToContent('div', result));
-    });
-  }
-  onload = runExample;
-
-</script>
 </body>
 </html>
